Expose Engine to Editor
11. 2 basic functions exposed to editor. Create/Remove entities. Next implementation will be components and transforms.

--- a/SNEditor/SNEditor.csproj
+++ b/SNEditor/SNEditor.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <BaseOutputPath>C:\Users\garal\source\repos\SNEngine\build\</BaseOutputPath>
   </PropertyGroup>
 
 </Project>
